2007-09-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/ruler.py (get_length_function):
	* gaupol/gtk/util.py (prepare_text_view):
	Fix a few more potential lambda NameErrors.

2007-09-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/text.py (_capitalize_position):
	Do not capitalize after ellipses.

2007-09-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.common-error.in:
	Fix a copy-paste error.

	* data/gaupol.gtk.conf.spec:
	* data/glade/text-assistant-capitalization-page.glade:
	* data/patterns/Latn.capitalization.conf:
	* data/patterns/Latn.capitalization.in:
	* data/patterns/Latn-en.capitalization.conf:
	* data/patterns/Latn-en.capitalization.in:
	* gaupol/agents/text.py (capitalize):
	* gaupol/gtk/assistants/text/assistant.py (_init_properties):
	* gaupol/gtk/assistants/text/capitalization.py:
	Add a capitalization task to the text correction assistant.

2007-09-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/files/subfile.py (_read_lines):
	Strip blank lines from beginning as well.

2007-09-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/file/subtitle.py (_init_filters):
	Replace "Plain text" file filter with an "All supported files" filter
	and set that active by default.

2007-09-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/split.py (_split_project):
	Call insert_subtitles on destination to mark as changed.

2007-09-21  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/tooltips.py:
	Fix markup tooltip hack to work with (Py)GTK 2.12.

2007-09-21  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/save.py:
	Fix error saving after splitting project. (#10041)

2007-09-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/renderers/multiline.py (_on_editor_focus_out_event):
	* gaupol/gtk/renderers/time.py (_on_editor_focus_out_event):
	Revert the erroneous 2007-09-18 focus-out-event fixes.

2007-09-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/encoding.py: